# led-cube

./: .gitignore  README.md  master.sch  slave.brd  slave.sch
arduino_serial_client/: arduino_serial_client.ino
arduino_serial_client_mega/: arduino_serial_client_mega.ino
master cam/: master.cam
master cam/CAMOutputs/GerberFiles/: copper_top.gbr  gerber_job.gbrjob  profile.gbr  silkscreen_bottom.gbr  silkscreen_top.gbr
pcb/master pcb/: master.brd
pcb/master pcb/master cam/CAMOutputs/DrillFiles/: drills.xln
pcb/master pcb/master cam/CAMOutputs/GerberFiles/: copper_bottom.gbr  soldermask_bottom.gbr  soldermask_top.gbr
pcb/slave pcb/: slave.brd
pcb/slave pcb/slave cam/: slave_job.cam
pcb/slave pcb/slave cam/CAMOutputs/DrillFiles/: drills.xln
pcb/slave pcb/slave cam/CAMOutputs/GerberFiles/: copper_bottom.gbr  profile.gbr  silkscreen_bottom.gbr  soldermask_bottom.gbr  solderpaste_top.gbr
pi/: CMakeLists.txt  Doxyfile  README.md
pi/animation_generator/: Animation.cpp  Animation.h  LEDCube.cpp  LEDCube.h  PlaneWop.cpp  main.cpp
pi/animation_generator/animations/: CubeWop.cpp  CubeWop_I.cpp  Fireworks.cpp  FlashFade.cpp  PlaneWop.cpp  Rain.cpp  Waves_I.cpp
pi/serial/: CMakeLists.txt
pi/src/: 3DViewer.cpp  3DViewer.h  Animation.h  LEDCube.cpp  LEDCube.h  LEDCubeUSBStreamer.cpp  LEDCubeUSBStreamer.h  LEDCubeVisualizer.cpp  LEDCubeVisualizer.h  main.cpp  visualizer.cpp
pi/src/animations/: CubeConstructor.cpp  CubeJacket.cpp  CubeWop_I.cpp  Fireworks.cpp  FlashFade.cpp  PlaneWop.cpp  Rain.cpp  SnakeSolver.cpp  Suspension.cpp  Waves_I.cpp  Waves_II.cpp
slave cam/CAMOutputs/GerberFiles/: copper_top.gbr  gerber_job.gbrjob  silkscreen_top.gbr  soldermask_top.gbr
